# cor

./: CMakeLists.txt  README.md
includes/: AcoHeaders.h  CorEngineHeaders.h  CorHeaders.h  SearchSpaceHeaders.h
includes/aco/: AntSolution.h  BestWorstACO.h  CorProblem.h
includes/datosBD/: mongoDB.h
includes/fuzzy/: CorEngine.h  RuleBlockGenerator.h
includes/search_space/: Sample.h  SampleGenerator.h  SearchSpace.h  Subspace.h  SubspaceGenerator.h  TermsGenerator.h
libraries/fuzzylite/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
libraries/fuzzylite/src/rule/: RuleBlock.cpp
libraries/fuzzylite/src/variable/: OutputVariable.cpp
source/: main.cpp
source/aco/: AntSolution.cpp  BestWorstACO.cpp  CorProblem.cpp
source/datosBD/: mongoDB.cpp
source/fuzzy/: CorEngine.cpp  RuleBlockGenerator.cpp
source/search_space/: Sample.cpp  SampleGenerator.cpp  SearchSpace.cpp  Subspace.cpp  SubspaceGenerator.cpp  TermsGenerator.cpp
